--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1640,6 +1640,52 @@ a {
 }
 
 
+// ███████╗░█████╗░░██████╗░
+// ██╔════╝██╔══██╗██╔═══██╗
+// █████╗░░███████║██║██╗██║
+// ██╔══╝░░██╔══██║╚██████╔╝
+// ██║░░░░░██║░░██║░╚═██╔═╝░
+// ╚═╝░░░░░╚═╝░░╚═╝░░░╚═╝░░░
+
+
+// code for welcome 
+.c-faqs-page-section-container {
+    // background-image: linear-gradient(90deg, $primary, $primary-light);
+    padding: 50px 10px;
+
+    .c-faqs-page-container {
+        background-color: $white;
+        padding: 20px 15px;
+        border-radius: 5px;
+
+        .c-faqs-heading {
+            h1 {
+                font-family: poppins;
+                font-weight: 800;
+                text-align: center;
+                text-transform: uppercase;
+                color: $primary;
+            }
+        }
+
+        .c-faqs-sub-heading {
+            h2 {
+                font-family: poppins;
+                font-weight: 700;
+                // text-align: center;
+                font-size: 1.2rem;
+
+            }
+        }
+
+        .c-faqs-content-container {
+            margin: 20px 0;
+        }
+
+    }    
+}
+
+
 
 // ███████╗ ██████╗  ██████╗ ████████╗███████╗██████╗ 
 // ██╔════╝██╔═══██╗██╔═══██╗╚══██╔══╝██╔════╝██╔══██╗
